--- a/TotalCrossVM/src/launchers/android/AndroidManifest.xml
+++ b/TotalCrossVM/src/launchers/android/AndroidManifest.xml
@@ -6,7 +6,7 @@
       android:sharedUserId="totalcross.app.sharedid"
       >
     <application android:icon="@drawable/icon" android:label="Stub"
-     android:theme="@style/TCThemeNS" >
+     android:theme="@style/TCThemeFS" >
         <activity android:name=".Stub">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
