adds support to build for android using gradle - first version

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ TotalCrossVM/builders/xcode/TotalCross.xcworkspace/xcuserdata/tcbuilder.xcuserda
 TotalCrossVM/builders/vc*/**/*.pdb
 TotalCrossVM/builders/vc*/**/*.lib
 TotalCrossVM/builders/vc*/**/*.dll
+TotalCrossVM/builders/droid/build/
+TotalCrossVM/builders/droid/.gradle/
+TotalCrossVM/builders/droid/gradle/
+TotalCrossVM/builders/droid/src/main/libs/armeabi/
