--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -56,7 +56,7 @@ android {
 	    tasks.withType(Exec) { environment << envVars }
 	}
     
-    task build_android_native(type:Exec) {
+    task buildAndroidNative(type:Exec) {
     	delete '../../native'
         copy {
 	        from './../../../../Litebase/LitebaseSDK/src'
@@ -77,10 +77,45 @@ android {
 			}
 		}
     }
-    assembleDebug.mustRunAfter build_android_native
     
-    task buildAndroid_sdkNoClean(dependsOn: ['build_android_native', 'assembleDebug']) << {
+	task assembleAssets(type:Zip) {
+		from ('../../../TotalCrossSDK/dist/vm') {
+			include 'TCBase.tcz'
+			include 'TCUI.tcz'
+		}
+		from ('../../../TotalCrossSDK/etc/fonts') {
+			include 'TCFont.tcz'
+		}
+		from ('../../../../Litebase/LitebaseSDK/dist/lib/') {
+			include 'LitebaseLib.tcz'
+		}
+		entryCompression ZipEntryCompression.STORED
+		baseName 'tcfiles'
+		destinationDir file('src/main/assets') // directory that you want your archive to be placed in
+	}
+	
+	task copyApk (type:Copy){
+    	from 'build/outputs/apk'
+        into '../..'
+	}
+	
+	task blah {
+		println archivesBaseName
+	}
+	
+	assembleDebug {}.doLast{
+    	tasks.copySupportFiles.execute()
+	}
+	
+	assembleDebug.mustRunAfter buildAndroidNative, assembleAssets
+	assembleRelease.mustRunAfter buildAndroidNative, assembleAssets
+    
+    task buildAndroid_sdkNoClean(dependsOn: ['buildAndroidNative', 'assembleAssets', 'assembleDebug']) << {
     }
+    
+    project.afterEvaluate{
+   		prepareReleaseDependencies.dependsOn(['buildAndroidNative', 'assembleAssets'])
+	}
 }
 
  repositories { 
@@ -91,7 +126,7 @@ android {
  }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
 	compile 'com.sun.mail:android-mail:1.5.5'
 	compile 'com.sun.mail:android-activation:1.5.5'
 }
