--- a/TotalCrossVM/builders/android/apps/tcvm/project.properties
+++ b/TotalCrossVM/builders/android/apps/tcvm/project.properties
@@ -15,3 +15,4 @@ split.density=false
 # Project target.
 # THIS FILE IS NO LONGER USED - SEE G:\TotalCross\TotalCrossVM\src\jni\default.properties
 target=android-11
+android.library.reference.1=P:/eclipsews/google-play-services_lib
