--- a/TotalCrossVM/.gitignore
+++ b/TotalCrossVM/.gitignore
@@ -10,3 +10,8 @@ builders/chime.mp3
 src/launchers/android/lint.xml
 builders/xcode/totalcross_ios_devkeys
 builders/uedit.GUILHERMECHAZAN.g.pui
+builders/droid/src/main/assets
+builders/droid/gradlew
+builders/droid/gradlew.bat
+builders/droid/*.log
+builders/droid/*.properties
