--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -34,6 +34,35 @@
            <category android:name="android.intent.category.DEFAULT"/>
          </intent-filter>
         </activity>
+        <!-- push notifications -->
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="totalcross.applmv3.gcm" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name="totalcross.android.gcm.MyGcmListenerService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name="totalcross.android.gcm.MyInstanceIDListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
+         <service
+            android:name="totalcross.android.gcm.RegistrationIntentService"
+            android:exported="false">
+        </service>
     </application>
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="11" />
     <uses-permission android:name="android.permission.READ_LOGS" />
@@ -70,4 +99,13 @@
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.telephony" android:required="false"/>
     <uses-feature android:name="android.hardware.wifi" android:required="false"/>
+    <!-- push notifications -->
+    <uses-permission android:name="com.google.android.c2dm.permission.SEND" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <permission android:name="totalcross.applmv3.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="totalcross.applmv3.permission.C2D_MESSAGE" />
+    <!--uses-permission android:name="android.permission.WAKE_LOCK" /-->
+    
+
 </manifest>
