push fully working. still have to make a way to pass the device identification to the application and integrate into deploy

--- a/TotalCrossVM/builders/android/apps/tcvm/.classpath
+++ b/TotalCrossVM/builders/android/apps/tcvm/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/DataCollection.jar"/>
 	<classpathentry kind="lib" path="/google-play-services_lib/libs/google-play-services.jar"/>
+	<classpathentry kind="lib" path="P:/extlibs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
