make sure copyApk always run after assembleRelease when both are executed together

--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -132,6 +132,7 @@ android {
 	*/
 	assembleDebug.mustRunAfter buildAndroidNative, assembleAssets
 	assembleRelease.mustRunAfter buildAndroidNative, assembleAssets
+	copyApk.mustRunAfter assembleRelease
     
     task buildAndroid_sdkNoClean(dependsOn: ['buildAndroidNative', 'assembleAssets', 'assembleDebug']) << {
     }
