forcing the execution of assembleAssets

--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -87,7 +87,8 @@ android {
 		}
     }
     
-	task assembleAssets(type:Zip) << {
+	task assembleAssets(type:Zip) {
+		outputs.upToDateWhen { false }
 		from ('../../../TotalCrossSDK/dist/vm') {
 			include 'TCBase.tcz'
 			include 'TCUI.tcz'
