--- a/TotalCrossVM/builders/droid/src/singleApk/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/singleApk/AndroidManifest.xml
@@ -12,7 +12,7 @@
 			</intent-filter>
 		</activity>
 
-		<receiver android:name=".StartupIntentReceiver">
+		<receiver android:name="totalcross.android.StartupIntentReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 			</intent-filter>
