--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
       android:sharedUserId="totalcross.app.sharedid"
     >
 
-    <application android:icon="@drawable/ic_launcher" android:label="TotalCross Virtual Machine"
+    <application android:icon="@drawable/icon" android:label="TotalCross Virtual Machine"
          android:theme="@style/TCThemeNS">
         <activity android:name=".Loader" 
         android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|fontScale|keyboard" 
