--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
          </intent-filter>
         </activity>
         <!-- push notifications -->
+        <meta-data android:name="pushToken" android:value="_111222333444_" />
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
