--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="totalcross.applmv3.gcm" />
+                <category android:name="totalcross.android.gcm" />
             </intent-filter>
         </receiver>
         <!-- receives the message -->
