finished implementing push on android

--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="totalcross.android.gcm" />
+                <category android:name="totalcross.android" />
             </intent-filter>
         </receiver>
         <!-- receives the message -->
@@ -101,9 +101,6 @@
     <uses-permission android:name="com.google.android.c2dm.permission.SEND" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <permission android:name="totalcross.applmv3.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-    <uses-permission android:name="totalcross.applmv3.permission.C2D_MESSAGE" />
-    <!--uses-permission android:name="android.permission.WAKE_LOCK" /-->
-    
-
+    <permission android:name="totalcross.android.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="totalcross.android.permission.C2D_MESSAGE" />
 </manifest>
