--- a/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
+++ b/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
@@ -323,9 +323,9 @@ JPEG_FILES =                               \
 	$(sourcedir)/jpeg/jcarith.c                \
 	$(sourcedir)/jpeg/jdarith.c                \
 	$(sourcedir)/jpeg/jdmerge.c                \
-	$(sourcedir)/jpeg/jidcflt.c                \
+	$(sourcedir)/jpeg/jidctflt.c               \
 	$(sourcedir)/jpeg/jidctfst.c               \
-	$(sourcedir)/jpeg/jidcint.c                \
+	$(sourcedir)/jpeg/jidctint.c               \
 	$(sourcedir)/jpeg/jfdctflt.c               \
 	$(sourcedir)/jpeg/jfdctfst.c               \
 	$(sourcedir)/jpeg/jfdctint.c               \
