Revert "tentativa de corrigir build do linux"
This reverts commit 2189dbb7438121fb9990d7588e18bfc5995a96e3.

--- a/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
+++ b/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
@@ -292,7 +292,7 @@ PNG_FILES =                                \
 	$(sourcedir)/png/pngset.c                  \
 	$(sourcedir)/png/pngtrans.c
 
-libpng_la_CFLAGS = -DPNG_SETJMP_NOT_SUPPORTED ${AM_CFLAGS} -I${sourcedir}/png
+libpng_la_CFLAGS = -DPNG_SETJMP_NOT_SUPPORTED ${AM_CFLAGS}
 
 libpng_la_SOURCES = ${PNG_FILES}
 
