updated axtls library to version 1.5.4 tried to make it as clean as possible - removed some palmos and symbian defines while at it

--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -3589,6 +3589,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\axtls\sha384.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\axtls\sha512.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\axtls\ssl.h"
 				>
 			</File>
@@ -3610,6 +3618,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\axtls\version.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\axtls\x509.c"
 				>
 			</File>
 		</Filter>
