--- a/TotalCrossVM/builders/vc2013win/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2013win/TCVM.vcproj
@@ -3561,6 +3561,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\axtls\sha384.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\axtls\sha512.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\axtls\x509.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\axtls\ssl.h"
 				>
 			</File>
