--- a/TotalCrossVM/builders/vc2013win/TCVM.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013win/TCVM.vcxproj.filters
@@ -1061,6 +1061,15 @@
     <ClCompile Include="..\..\src\axtls\sha256.c">
       <Filter>axtls</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\axtls\sha384.c">
+      <Filter>axtls</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\axtls\sha512.c">
+      <Filter>axtls</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\axtls\x509.c">
+      <Filter>axtls</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\axtls\tls1.c">
       <Filter>axtls</Filter>
     </ClCompile>
