removed the additional include and defined NOCRYPT a 2nd time in zip.h

--- a/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
+++ b/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
@@ -8,7 +8,7 @@ sourcedir	= ${srcdir}/../../../src
 
 AM_CFLAGS = $(CFLAGS) -DTHEOS -DPOSIX -D_REENTRANT -DTOTALCROSS -DFORCE_LIBC_ALLOC -DTC_EXPORTS -Wall -Wunused-function -Wno-import -fno-strict-aliasing -I${sourcedir}/util
 if LINUX
-AM_CFLAGS += -I${sourcedir}/init -I${sourcedir}/tcvm -I${sourcedir}/nm/io -I${sourcedir}/nm/ui -I${sourcedir}/nm -I${sourcedir}/zlib
+AM_CFLAGS += -I${sourcedir}/init -I${sourcedir}/tcvm -I${sourcedir}/nm/io -I${sourcedir}/nm/ui -I${sourcedir}/nm
 endif
 
 if LINUX
