new zxing files

--- a/TotalCrossVM/builders/android/apps/tcvm/.classpath
+++ b/TotalCrossVM/builders/android/apps/tcvm/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="P:/android-sdk-windows/add-ons/addon_google_apis_google_inc_8/libs/maps.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="P:/android-sdk-windows/platforms/android-11/android.jar"/>
+	<classpathentry kind="lib" path="P:/android-sdk-windows4.4/sdk/platforms/android-19/android.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/DataCollection.jar"/>
 	<classpathentry kind="lib" path="/google-play-services_lib/libs/google-play-services.jar"/>
