many tries to make zxing work but now i'm getting this:
java.lang.RuntimeException: Unable to start activity
ComponentInfo{totalcross.android/totalcross.android.CaptureActivity}:
android.view.InflateException: Binary XML file line #17: Error inflating
class alpha
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.app.ActivityThread.performLaunchActivity(ActivityThread.java:3184)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:3294)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.app.ActivityThread.access$1000(ActivityThread.java:210)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.app.ActivityThread$H.handleMessage(ActivityThread.java:1704)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.os.Handler.dispatchMessage(Handler.java:102)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.os.Looper.loop(Looper.java:145)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.app.ActivityThread.main(ActivityThread.java:6938)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
java.lang.reflect.Method.invoke(Native Method)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
java.lang.reflect.Method.invoke(Method.java:372)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:1404)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
com.android.internal.os.ZygoteInit.main(ZygoteInit.java:1199)
09-12 16:31:46.982 E/AndroidRuntime(32388): Caused by:
android.view.InflateException: Binary XML file line #17: Error inflating
class alpha
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.preference.GenericInflater.createItemFromTag(GenericInflater.java:441)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.preference.GenericInflater.inflate(GenericInflater.java:317)
09-12 16:31:46.982 E/AndroidRuntime(32388):     at
android.preference.GenericInflater.inflate(GenericInflater.jav

--- a/TotalCrossVM/builders/android/apps/tcvm/.project
+++ b/TotalCrossVM/builders/android/apps/tcvm/.project
@@ -66,6 +66,11 @@
 			<type>2</type>
 			<locationURI>TOTALCROSS_REPO_LOC/TotalCrossVM/src</locationURI>
 		</link>
+      <link>
+			<name>src_java/totalcross/AndroidUtils.java</name>
+			<type>1</type>
+			<locationURI>TOTALCROSS_REPO_LOC/TotalCrossVM/src/launchers/android/src/totalcross/AndroidUtils.java</locationURI>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
