enabled property UIFileSharingEnabled as requested by Greg on #3142

--- a/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
+++ b/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
@@ -38,6 +38,8 @@
 	</array>
 	<key>UIRequiresFullScreen</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UIStatusBarStyle</key>
