added AdMob support for TotalCross, using class totalcross.money.Ads

--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -156,6 +156,7 @@ android {
 dependencies {
 	compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
 	compile 'com.google.android.gms:play-services:8.3.0'
+	compile 'com.google.android.gms:play-services-ads:8.3.0'
 	
     // Supports Android 4.0.3 and later (API level 15)
     compile 'com.journeyapps:zxing-android-embedded:2.3.0@aar'
