--- a/TotalCrossVM/src/launchers/android/AndroidManifest.xml
+++ b/TotalCrossVM/src/launchers/android/AndroidManifest.xml
@@ -7,6 +7,7 @@
       >
     <application android:icon="@drawable/icon" android:label="Stub"
      android:theme="@style/TCThemeNS" >
+        <meta-data android:name="isFullScreen" android:value="fullscreen:0" />
         <activity android:name=".Stub">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
