Ignorando arquivos do VIM

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ TotalCrossVM/builders/droid/build/
 TotalCrossVM/builders/droid/.gradle/
 TotalCrossVM/builders/droid/gradle/
 TotalCrossVM/builders/droid/src/main/libs/armeabi/
+
+# Files from vim
+.*.swp
