--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -32,16 +32,6 @@
          </intent-filter>
         </activity>
         <!-- push notifications -->
-        <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="totalcross.android" />
-            </intent-filter>
-        </receiver>
         <!-- receives the message -->
         <service
             android:name="totalcross.android.gcm.GCMMessageReceiver"
@@ -52,10 +42,9 @@
         </service>
         <!-- receives the token (2nd time on) -->
         <service
-            android:name="totalcross.android.gcm.MyInstanceIDListenerService"
-            android:exported="false">
+            android:name="totalcross.android.firebase.MyInstanceIDListenerService">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
         <!-- receives the token - must be in a separate intent -->
@@ -99,9 +88,4 @@
     <uses-feature android:name="android.hardware.telephony" android:required="false"/>
     <uses-feature android:name="android.hardware.wifi" android:required="false"/>
     <!-- push notifications -->
-    <uses-permission android:name="com.google.android.c2dm.permission.SEND" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <permission android:name="totalcross.android.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-    <uses-permission android:name="totalcross.android.permission.C2D_MESSAGE" />
 </manifest>
