--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -148,9 +148,9 @@ android {
 
 dependencies {
 	compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
-	compile 'com.google.android.gms:play-services:8.3.0'
-	compile 'com.google.android.gms:play-services-ads:8.3.0'
-	compile "com.google.firebase:firebase-messaging:9.6.1"
+	compile 'com.google.android.gms:play-services:' + googleGmsVersion
+	compile 'com.google.android.gms:play-services-ads:' + googleGmsVersion
+	compile "com.google.firebase:firebase-messaging:" + googleGmsVersion
 	
     // Supports Android 4.0.3 and later (API level 15)
     compile 'com.journeyapps:zxing-android-embedded:2.3.0@aar'
