Corrigindo nome do pacote

--- a/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
+++ b/TotalCrossVM/builders/droid/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <!-- push notifications -->
         <!-- receives the message -->
 		<service
-			android:name="totalcross.android.gcm.FirebaseMessageReceiver">
+			android:name="totalcross.android.firebase.FirebaseMessageReceiver">
 			<intent-filter>
 				<action android:name="com.google.firebase.MESSAGING_EVENT" />
 			</intent-filter>
